2005-05-23  Brian Gough  <bjg@network-theory.co.uk>

	* test_bessel.c (test_bessel): added test for steed(99,1,...)

	* legendre_H3d.c (legendre_H3d_CF1): use hypot
	(legendre_H3d_CF1_ser): use hypot
	(gsl_sf_legendre_H3d_e): use hypot
	(gsl_sf_legendre_H3d_e): use hypot
	(gsl_sf_legendre_H3d_array): use hypot

	* dilog.c (dilogc_unitdisk): use hypot

	* coulomb.c (gsl_sf_coulomb_CL_array): use hypot
	(coulomb_F_recur): use hypot
	(coulomb_G_recur): use hypot
	(coulomb_jwkb): use hypot
	(gsl_sf_coulomb_wave_F_array): use hypot
	(gsl_sf_coulomb_wave_FG_array): use hypot
	(gsl_sf_coulomb_wave_FGp_array): use hypot

	* bessel_j.c (gsl_sf_bessel_jl_steed_array): use hypot

	* bessel.c (gsl_sf_bessel_Inu_scaled_asymp_unif_e): use hypot
	(gsl_sf_bessel_Knu_scaled_asymp_unif_e): use hypot

2005-03-02  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb_bound.c (gsl_sf_hydrogenicR_e): don't check for
	underflow when function is known to be zero (e.g. r=0 l>0 or at
	zeroes of the laguerre polynomial).

2004-12-29  Brian Gough  <bjg@network-theory.co.uk>

	* dilog.c (gsl_sf_complex_dilog_e): use const consistently in
	arguments of declaration and definition
	(gsl_sf_complex_dilog_xy_e): as above

2004-12-26  Brian Gough  <bjg@network-theory.co.uk>

	* gamma_inc.c (gamma_inc_D): improve error estimate for case of
	u=x/a to include cancellation errors and only use it when x < 0.5*a
	since the cancellation errors are significant for x/a ~ 1

2004-12-23  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_sf_coupling.h: fixed declaration to
	gsl_sf_coupling_6j_INCORRECT instead of
	gsl_sf_coupling_INCORRECT_6j

2004-11-12  Brian Gough  <bjg@network-theory.co.uk>

	* psi.c (gsl_sf_psi_1): added missing function definition
	gsl_sf_psi_1

2004-10-11  Brian Gough  <bjg@network-theory.co.uk>

	* expint.c (gsl_sf_expint_Ei_scaled): fixed call to incorrect
	function gsl_sf_expint_Ei_e

2004-06-03  Brian Gough  <bjg@network-theory.co.uk>

	* psi.c (psi_n_xg0): added missing return type int
