@@ -1,3 +1,8 @@
+2005-06-26  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test_sf.c (test_jac): added tests over the full period for
+	elljac functions
+
 2005-05-23  Brian Gough  <bjg@network-theory.co.uk>
 
 	* test_bessel.c (test_bessel): added test for steed(99,1,...)
